# scientific-change-analysis

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: data.yaml  model.yaml  network.yaml
docs/: CONTRIBUTING.md
examples/: build_citation_network.py  detect_shifts.py
notebooks/: 01_data_loading.ipynb
src/: __init__.py
src/data/: __init__.py  academic_loader.py  web_scraper.py
src/models/: __init__.py  clustering.py  community_detection.py  embeddings.py  node2vec.py  paradigm_detector.py  sentence_embeddings.py
src/models/gnn/: __init__.py  gat.py
src/networks/: __init__.py  citation_network.py
src/utils/: __init__.py  visualization.py
tests/: __init__.py  conftest.py  test_embeddings.py  test_models.py  test_networks.py
